# Kyake

./: .gitignore  README.md  compare_with_others.ipynb  korea_yake_test.py  pke_u_test.ipynb  pyproject.toml  test.txt  test_korea_yake_test.ipynb
documents/: POS for yake.xlsx  키워드 추출 비교 실험.xlsx
pke_u_i9/: base.py  data_structures.py  ingoo_test.py  langcodes.py  pke_u_i9.py  pyproject.toml  readers.py  yake.py
poetry-kyake/: pyproject.toml
poetry-kyake/tests/: test_poetry_kyake.py
test_dacon/: rouge_metric.py  test.ipynb  test_compare.ipynb  test_testmain.py
test_paper/: Yake_accuracy_test.ipynb  test_paper.py
test_paper/.ipynb_checkpoints/: Yake_accuracy_test-checkpoint.ipynb  test_paper.py
test_paper/500N-KPCrowd/src/marujo-data/__MACOSX/test/: ._science-20858767.txt
test_paper/500N-KPCrowd/src/marujo-data/__MACOSX/train/: ._health-20943227.txt
yake/: __init__.py  datarepresentation_korea.py  korea_token.py  yake.py
yake/StopwordsList/: stopwords_ko.txt
