[tool.poetry]
name = "kyake"
version = "0.1.0"
description = "poetry for Kyake"
authors = ["GUNYOUNG LEE <2ky1234@khu.ac.kr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jellyfish = "^0.9.0"
numpy = "^1.23.4"
segtok = "^1.5.11"
konlpy = "^0.6.0"
networkx = "^2.8.7"
pandas = "^1.5.0"
nltk = "^3.7"
spacy = "^3.4.2"
eunjeon = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
